--- a/StreamStage/MainWindow.xaml
+++ b/StreamStage/MainWindow.xaml
@@ -5,16 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StreamStage"
         mc:Ignorable="d"
-        Title="MainWindow" Height="768.055" Width="1504.167" ResizeMode="NoResize">
+        Title="MainWindow" Height="846" Width="1504" MinHeight="846" MinWidth="1504">
     <Grid>
-        <Button x:Name="btnPS1" Content="Select Player 1" HorizontalAlignment="Left" Height="170" Margin="10,10,0,0" VerticalAlignment="Top" Width="400" Click="btnPS1_Click" FontSize="36"/>
-        <Button x:Name="btnPS2" Content="Select Player 2" Margin="1082,10,0,0" Click="btnPS2_Click" HorizontalAlignment="Left" Width="400" FontSize="36" Height="170" VerticalAlignment="Top"/>
-        <Label x:Name="lblStanding" Content="0:0" HorizontalAlignment="Left" Height="516" Margin="463,199,0,0" VerticalAlignment="Top" Width="495" HorizontalContentAlignment="Center" FontSize="350" VerticalContentAlignment="Center"/>
-        <Button x:Name="btnP1plus" Content="+" HorizontalAlignment="Left" Height="250" Margin="10,199,0,0" VerticalAlignment="Top" Width="400" FontSize="160" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" Click="btnP1plus_Click"/>
-        <Button x:Name="btnP1minus" Content="-" HorizontalAlignment="Left" Height="250" Margin="10,465,0,0" VerticalAlignment="Top" Width="400" FontSize="160" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" Click="btnP1minus_Click"/>
-        <Button x:Name="btnP2plus" Content="+" HorizontalAlignment="Left" Height="250" Margin="1082,199,0,0" VerticalAlignment="Top" Width="400" FontSize="160" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" Click="btnP2plus_Click"/>
-        <Button x:Name="btnP2minus" Content="-" HorizontalAlignment="Left" Height="250" Margin="1082,465,0,0" VerticalAlignment="Top" Width="400" FontSize="160" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" Click="btnP2minus_Click"/>
-        <ComboBox x:Name="cbxStage" HorizontalAlignment="Left" Height="170" Margin="430,10,0,0" VerticalAlignment="Top" Width="632" FontSize="42" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" MaxDropDownHeight="500" SelectionChanged="cbxStage_SelectionChanged"/>
+        <Button x:Name="btnPS1" Content="Select Player 1" Margin="10,10,0,0" Click="btnPS1_Click" FontSize="36" Height="170" VerticalAlignment="Top" HorizontalAlignment="Left" Width="400"/>
+        <Button x:Name="btnPS2" Content="Select Player 2" Margin="0,10,14,0" Click="btnPS2_Click" FontSize="36" Height="170" VerticalAlignment="Top" HorizontalAlignment="Right" Width="400"/>
+        <Label x:Name="lblStanding" Content="0:0" Margin="430,199,434,10" HorizontalContentAlignment="Center" FontSize="350" VerticalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Width="632" Height="606"/>
+        <Button x:Name="btnP1plus" Content="+" Margin="10,199,0,321" FontSize="160" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Click="btnP1plus_Click" HorizontalAlignment="Left" Width="400"/>
+        <Button x:Name="btnP1minus" Content="-" Margin="10,0,0,10" FontSize="160" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Click="btnP1minus_Click" VerticalAlignment="Bottom" Height="295" HorizontalAlignment="Left" Width="400" Padding="1" UseLayoutRounding="False"/>
+        <Button x:Name="btnP2plus" Content="+" Margin="0,199,14,321" FontSize="160" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Click="btnP2plus_Click" HorizontalAlignment="Right" Width="400"/>
+        <Button x:Name="btnP2minus" Content="-" Margin="0,0,14,10" FontSize="160" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Click="btnP2minus_Click" HorizontalAlignment="Right" Width="400" Height="295" VerticalAlignment="Bottom"/>
+        <ComboBox x:Name="cbxStage" Height="170" Margin="430,10,434,0" VerticalAlignment="Top" FontSize="42" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" MaxDropDownHeight="500" SelectionChanged="cbxStage_SelectionChanged"/>
 
     </Grid>
 </Window>
